--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">EnglishTranslationWord</string>
+
+    <string name="list_words_title">List words</string>
+    <string name="add_word_title">Add word</string>
 </resources>
